--- a/qmineseeper.qrc
+++ b/qmineseeper.qrc
@@ -1,19 +1,22 @@
 <RCC>
-    <qresource prefix="/Resources/img">
-        <file>Resources/mine.png</file>
-        <file>Resources/flag.png</file>
-        <file>Resources/num1.png</file>
-        <file>Resources/num2.png</file>
-        <file>Resources/num3.png</file>
-        <file>Resources/num4.png</file>
-        <file>Resources/num5.png</file>
-        <file>Resources/num6.png</file>
-        <file>Resources/num7.png</file>
-        <file>Resources/num8.png</file>
-        <file>Resources/emoji_0.png</file>
-        <file>Resources/emoji_1.png</file>
-        <file>Resources/emoji_2.png</file>
-        <file>Resources/bank.png</file>
-        <file>Resources/init.png</file>
+    <qresource prefix="/Resources">
+        <file>Resources/imgs/bank.png</file>
+        <file>Resources/imgs/emoji_0.png</file>
+        <file>Resources/imgs/emoji_1.png</file>
+        <file>Resources/imgs/emoji_2.png</file>
+        <file>Resources/imgs/flag.png</file>
+        <file>Resources/imgs/init.png</file>
+        <file>Resources/imgs/mine.ico</file>
+        <file>Resources/imgs/mine.png</file>
+        <file>Resources/imgs/num1.png</file>
+        <file>Resources/imgs/num2.png</file>
+        <file>Resources/imgs/num3.png</file>
+        <file>Resources/imgs/num4.png</file>
+        <file>Resources/imgs/num5.png</file>
+        <file>Resources/imgs/num6.png</file>
+        <file>Resources/imgs/num7.png</file>
+        <file>Resources/imgs/num8.png</file>
+        <file>Resources/sounds/click.wav</file>
+        <file>Resources/sounds/flag.wav</file>
     </qresource>
 </RCC>
