1. 增加圖片緩存功能 2. 增加佈景主題選擇功能 3. 完成遊戲判斷贏的邏輯

--- a/qmineseeper.qrc
+++ b/qmineseeper.qrc
@@ -16,5 +16,16 @@
         <file>Resources/imgs/num6.png</file>
         <file>Resources/imgs/num7.png</file>
         <file>Resources/imgs/num8.png</file>
+        <file>Resources/imgs/2b55.png</file>
+        <file>Resources/imgs/274c.png</file>
+        <file>Resources/imgs/2716.png</file>
+        <file>Resources/imgs/2757.png</file>
+        <file>Resources/imgs/26a1.png</file>
+        <file>Resources/imgs/2600.png</file>
+        <file>Resources/imgs/2601.png</file>
+        <file>Resources/imgs/2614.png</file>
+        <file>Resources/imgs/1f4cc.png</file>
+        <file>Resources/imgs/1f47e.png</file>
+        <file>Resources/imgs/1f370.png</file>
     </qresource>
 </RCC>
